# ChangeLog for dev-python/nbformat
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  27 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> nbformat-9999.ebuild:
  dev-python/nbformat: Fix deps

  25 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> nbformat-9999.ebuild:
  dev-python/nbformat: Add PYTHON_REQ_USE='sqlite'

*nbformat-4.0.0 (12 Aug 2015)
*nbformat-9999 (12 Aug 2015)

  12 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> +metadata.xml,
  +nbformat-4.0.0.ebuild, +nbformat-9999.ebuild:
  dev-python/nbformat: Initial ebuild